# mapnik

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .hgignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CHANGELOG.python.rst  CITATION.cff  CMakeLists.txt  CMakePresets.json  COPYING  ChangeLog  DOCKER.md  Dockerfile  HOWTO.md  INSTALL  INSTALL.md  MANIFEST.in  Makefile  Makefile.am  Makefile.in  README  README.md  README.python.rst  SConstruct  TWKB-HOWTO.md  acinclude.m4  appveyor.yml  autogen.sh  bootstrap  bootstrap.sh  build.bat  circle.yml  codecov.yml  (+25 more)
agg/src/: Makefile.am  agg_bspline.cpp  agg_curves.cpp  agg_gsv_text.cpp  agg_image_filters.cpp  agg_line_aa_basics.cpp  agg_line_profile_aa.cpp  agg_sqrt_tables.cpp  agg_trans_affine.cpp  agg_trans_warp_magnifier.cpp  agg_vcgen_contour.cpp  agg_vcgen_stroke.cpp  agg_vpgen_clip_polyline.cpp
benchmark/: .gitignore  CMakeLists.txt  allocation.cpp  bench_framework.hpp  build.py  compare_images.hpp  run  run.cpp  run_benchmarks  template.cpp  test_array_allocation.cpp  test_expression_parse.cpp  test_face_ptr_creation.cpp  test_font_registration.cpp  test_getline.cpp  test_numeric_cast_vs_static_cast.cpp  test_offset_converter.cpp  test_png_encoding1.cpp  test_png_encoding2.cpp  test_polygon_clipping.cpp  test_polygon_clipping_rendering.cpp  test_proj_transform1.cpp  test_quad_tree.cpp  test_rendering.cpp  test_rendering_shared_map.cpp  test_to_bool.cpp  test_to_double.cpp  test_to_int.cpp  test_to_string1.cpp  test_to_string2.cpp  test_transcoding.cpp  test_utf_encoding.cpp
benchmark/data/: gdal-wgs.xml  polygon.wkt  polygon_rendering_clip.xml  polygon_rendering_no_clip.xml  raster-wgs.xml  roads.csv  roads.xml  valid.geotiff.tif
benchmark/include/: bench_framework.hpp  compare_images.hpp
benchmark/src/: normalize_angle.cpp  test_array_allocation.cpp  test_expression_parse.cpp  test_face_ptr_creation.cpp  test_font_registration.cpp  test_getline.cpp  test_marker_cache.cpp  test_noop_rendering.cpp  test_numeric_cast_vs_static_cast.cpp  test_offset_converter.cpp  test_png_encoding1.cpp  test_png_encoding2.cpp  test_polygon_clipping.cpp  test_polygon_clipping_rendering.cpp  test_proj_transform1.cpp  test_quad_tree.cpp  test_rendering.cpp  test_rendering_shared_map.cpp  test_to_bool.cpp  test_to_double.cpp  test_to_int.cpp  test_to_string1.cpp  test_to_string2.cpp  test_utf_encoding.cpp
benchmark/utils/: random_image.py
bindings/python/: Makefile.am  SConscript  boost_std_shared_shim.hpp  build.py  mapnik_building_symbolizer.cpp  mapnik_color.cpp  mapnik_coord.cpp  mapnik_datasource.cpp  mapnik_datasource_cache.cpp  mapnik_debug_symbolizer.cpp  mapnik_enumeration.hpp  mapnik_enumeration_wrapper_converter.hpp  mapnik_envelope.cpp  mapnik_expression.cpp  mapnik_feature.cpp  mapnik_featureset.cpp  mapnik_filter.cpp  mapnik_font_engine.cpp  mapnik_fontset.cpp  mapnik_gamma_method.cpp  mapnik_generator_grammars.cpp  mapnik_geometry.cpp  mapnik_glyph_symbolizer.cpp  mapnik_grid.cpp  mapnik_grid_view.cpp  mapnik_image.cpp  mapnik_image_view.cpp  mapnik_inmem_metawriter.cpp  mapnik_json_geometry_grammar.cpp  mapnik_label_collision_detector.cpp  mapnik_layer.cpp  mapnik_line_pattern_symbolizer.cpp  mapnik_line_symbolizer.cpp  mapnik_logger.cpp  mapnik_map.cpp  mapnik_marker_cache.cpp  mapnik_markers_symbolizer.cpp  mapnik_palette.cpp  mapnik_parameters.cpp  mapnik_parser_grammars.cpp  (+39 more)
demo/c++/: .gitignore  CMakeLists.txt  Makefile  README.md  SConscript  build.py  common.gypi  readme.txt  rundemo.cpp  rundemo.gyp
demo/viewer/: CMakeLists.txt  SConscript  about_dialog.cpp  about_dialog.hpp  build.py  cehuidatainfo.hpp  completeRoadsWidget.cpp  completeRoadsWidget.hpp  groupinfo.hpp  info_dialog.cpp  info_dialog.hpp  layer_info_dialog.cpp  layer_info_dialog.hpp  layerdelegate.cpp  layerdelegate.hpp  layerlistmodel.cpp  layerlistmodel.hpp  layerwidget.cpp  layerwidget.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mapnik_viewer.qrc  mapwidget.cpp  mapwidget.hpp  roadmerger.cpp  roadmerger.h  styles_model.cpp  styles_model.hpp  treewidget.hpp  viewer.ini  viewer.pro  waitingspinnerwidget.cpp  waitingspinnerwidget.h
include/: Makefile.am  agg_renderer.hpp  attribute.hh  attribute.hpp  attribute_collector.hh  attribute_collector.hpp  attribute_descriptor.hpp  build.py  color.hh  color.hpp  color_factory.hpp  colorcube.hpp  comparison.hh  comparison.hpp  config.hh.in  config.hpp  coord.hpp  coord_array.hpp  css_color_parser.hpp  ctrans.hh  ctrans.hpp  datasource.hh  datasource.hpp  datasource_cache.hh  datasource_cache.hpp  envelope.hpp  expression.hh  expression.hpp  factory.hh  factory.hpp  feature.hh  feature.hpp  feature_factory.hpp  feature_layer_desc.hpp  feature_style_processor.hpp  feature_type_style.hpp  fill.hpp  filter.hh  filter.hpp  filter_expression.hpp  (+97 more)
include/mapnik/: Makefile.am  adaptive_smooth.hpp  agg_helpers.hpp  agg_pattern_source.hpp  agg_rasterizer.hpp  agg_render_marker.hpp  agg_renderer.hpp  arrow.hpp  attribute.hpp  attribute_collector.hpp  attribute_descriptor.hpp  boolean.hpp  boolean_filter.hpp  boost_spirit_instantiate.hpp  box2d.hpp  box2d_impl.hpp  building_symbolizer.hpp  cairo_io.hpp  (+292 more)
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  SConscript  agg_renderer.cpp  agg_svg_parser.cpp  agg_svg_path_renderer.cpp  arrow.cpp  attribute.hh  attribute_container.hh  attribute_descriptor.hh  avif_reader.cpp  box2d.cpp  build.py  building_symbolizer.cpp  cairo_context.cpp  cairo_io.cpp  cairo_renderer.cpp  color.cpp  color_factory.cpp  colorcube.hh  comparison.hh  compositing_symbolizer.cpp  config.hh.in  config_error.cpp  conversions.cpp  conversions_numeric.cpp  conversions_string.cpp  coord.hh  coord_array.hh  create_image_reader.hpp  css_color_grammar.cpp  css_color_grammar_x3.cpp  dasharray_parser.cpp  datasource.hh  datasource_cache.cc  datasource_cache.cpp  datasource_cache_static.cpp  debug.cpp  (+198 more)
test/: CMakeLists.txt  build.py  catch.hpp  catch_ext.hpp  catch_tmp.hpp  cleanup.hpp  run
utils/: CMakeLists.txt  Makefile.am
(+5780 files in other folders)
